@@ -15,11 +15,14 @@
  */
 package io.micronaut.data.model.jpa.criteria.impl;
 
+import io.micronaut.core.annotation.AnnotationMetadata;
 import io.micronaut.core.annotation.Internal;
 import io.micronaut.core.annotation.NonNull;
 import io.micronaut.data.annotation.Join;
 import io.micronaut.data.model.PersistentEntity;
 import io.micronaut.data.model.jpa.criteria.IExpression;
+import io.micronaut.data.model.jpa.criteria.IPredicate;
+import io.micronaut.data.model.jpa.criteria.ISelection;
 import io.micronaut.data.model.jpa.criteria.PersistentEntityCriteriaDelete;
 import io.micronaut.data.model.jpa.criteria.PersistentEntityRoot;
 import io.micronaut.data.model.jpa.criteria.impl.predicate.ConjunctionPredicate;
@@ -29,6 +32,7 @@ import io.micronaut.data.model.jpa.criteria.impl.selection.CompoundSelection;
 import io.micronaut.data.model.jpa.criteria.impl.util.Joiner;
 import io.micronaut.data.model.query.QueryModel;
 import io.micronaut.data.model.query.builder.QueryBuilder;
+import io.micronaut.data.model.query.builder.QueryBuilder2;
 import io.micronaut.data.model.query.builder.QueryResult;
 import jakarta.persistence.criteria.Expression;
 import jakarta.persistence.criteria.Predicate;
@@ -42,7 +46,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * The abstract implementation of {@link PersistentEntityCriteriaDelete}.
@@ -53,12 +56,13 @@ import java.util.stream.Collectors;
  */
 @Internal
 public abstract class AbstractPersistentEntityCriteriaDelete<T> implements PersistentEntityCriteriaDelete<T>,
-        QueryResultPersistentEntityCriteriaQuery {
+    QueryResultPersistentEntityCriteriaQuery {
 
     protected Predicate predicate;
     protected PersistentEntityRoot<T> entityRoot;
     protected Selection<?> returning;
 
+    @NonNull
     @Override
     public QueryModel getQueryModel() {
         if (entityRoot == null) {
@@ -66,15 +70,13 @@ public abstract class AbstractPersistentEntityCriteriaDelete<T> implements Persi
         }
         QueryModel qm = QueryModel.from(entityRoot.getPersistentEntity());
         Joiner joiner = new Joiner();
-        if (predicate instanceof PredicateVisitable) {
-            PredicateVisitable predicate = (PredicateVisitable) this.predicate;
-            predicate.accept(createPredicateVisitor(qm));
-            predicate.accept(joiner);
+        if (predicate instanceof IPredicate predicateVisitable) {
+            predicateVisitable.visitPredicate(createPredicateVisitor(qm));
+            predicateVisitable.visitPredicate(joiner);
         }
-        if (returning instanceof SelectionVisitable) {
-            SelectionVisitable selection = (SelectionVisitable) this.returning;
-            selection.accept(new QueryModelSelectionVisitor(qm, false));
-            selection.accept(joiner);
+        if (returning instanceof ISelection<?> selectionVisitable) {
+            selectionVisitable.visitSelection(new QueryModelSelectionVisitor(qm, false));
+            selectionVisitable.visitSelection(joiner);
         }
         for (Map.Entry<String, Joiner.Joined> e : joiner.getJoins().entrySet()) {
             qm.join(e.getKey(), Optional.ofNullable(e.getValue().getType()).orElse(Join.Type.DEFAULT), e.getValue().getAlias());
@@ -84,6 +86,7 @@ public abstract class AbstractPersistentEntityCriteriaDelete<T> implements Persi
 
     /**
      * Creates query model predicate visitor.
+     *
      * @param queryModel The query model
      * @return the visitor
      */
@@ -93,8 +96,20 @@ public abstract class AbstractPersistentEntityCriteriaDelete<T> implements Persi
     }
 
     @Override
-    public QueryResult buildQuery(QueryBuilder queryBuilder) {
-        return queryBuilder.buildDelete(getQueryModel());
+    public QueryResult buildQuery(AnnotationMetadata annotationMetadata, QueryBuilder queryBuilder) {
+        QueryBuilder2 queryBuilder2 = QueryResultPersistentEntityCriteriaQuery.findQueryBuilder2(queryBuilder);
+        if (queryBuilder2 == null) {
+            return queryBuilder.buildDelete(annotationMetadata, getQueryModel());
+        }
+        return buildQuery(annotationMetadata, queryBuilder2);
+    }
+
+    @Override
+    public QueryResult buildQuery(AnnotationMetadata annotationMetadata, QueryBuilder2 queryBuilder) {
+        return queryBuilder.buildDelete(
+            annotationMetadata,
+            new DeleteQueryDefinitionImpl(entityRoot.getPersistentEntity(), predicate, returning)
+        );
     }
 
     @Override
@@ -119,7 +134,7 @@ public abstract class AbstractPersistentEntityCriteriaDelete<T> implements Persi
         Objects.requireNonNull(restrictions);
         if (restrictions.length > 0) {
             predicate = restrictions.length == 1 ? restrictions[0] : new ConjunctionPredicate(
-                    Arrays.stream(restrictions).sequential().map(x -> (IExpression<Boolean>) x).collect(Collectors.toList())
+                Arrays.stream(restrictions).sequential().map(x -> (IExpression<Boolean>) x).toList()
             );
         } else {
             predicate = null;
@@ -176,5 +191,20 @@ public abstract class AbstractPersistentEntityCriteriaDelete<T> implements Persi
             this.returning = null;
         }
         return this;
+    }
+
+    private static final class DeleteQueryDefinitionImpl extends AbstractPersistentEntityCriteriaQuery.BaseQueryDefinitionImpl implements QueryBuilder2.DeleteQueryDefinition {
+
+        private final Selection<?> returningSelection;
+
+        DeleteQueryDefinitionImpl(PersistentEntity persistentEntity, Predicate predicate, Selection<?> returningSelection) {
+            super(persistentEntity, predicate, Map.of());
+            this.returningSelection = returningSelection;
+        }
+
+        @Override
+        public Selection<?> returningSelection() {
+            return returningSelection;
+        }
     }
 }
