@@ -15,13 +15,17 @@
  */
 package io.micronaut.data.model.jpa.criteria.impl;
 
+import io.micronaut.core.annotation.AnnotationMetadata;
 import io.micronaut.core.annotation.Internal;
 import io.micronaut.core.annotation.NonNull;
 import io.micronaut.data.annotation.Join;
 import io.micronaut.data.model.PersistentEntity;
 import io.micronaut.data.model.jpa.criteria.IExpression;
+import io.micronaut.data.model.jpa.criteria.IPredicate;
+import io.micronaut.data.model.jpa.criteria.ISelection;
 import io.micronaut.data.model.jpa.criteria.PersistentEntityCriteriaUpdate;
 import io.micronaut.data.model.jpa.criteria.PersistentEntityRoot;
+import io.micronaut.data.model.jpa.criteria.impl.AbstractPersistentEntityQuery.BaseQueryDefinitionImpl;
 import io.micronaut.data.model.jpa.criteria.impl.predicate.ConjunctionPredicate;
 import io.micronaut.data.model.jpa.criteria.impl.query.QueryModelPredicateVisitor;
 import io.micronaut.data.model.jpa.criteria.impl.query.QueryModelSelectionVisitor;
@@ -29,6 +33,7 @@ import io.micronaut.data.model.jpa.criteria.impl.selection.CompoundSelection;
 import io.micronaut.data.model.jpa.criteria.impl.util.Joiner;
 import io.micronaut.data.model.query.QueryModel;
 import io.micronaut.data.model.query.builder.QueryBuilder;
+import io.micronaut.data.model.query.builder.QueryBuilder2;
 import io.micronaut.data.model.query.builder.QueryResult;
 import jakarta.persistence.criteria.Expression;
 import jakarta.persistence.criteria.ParameterExpression;
@@ -47,7 +52,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static io.micronaut.data.model.jpa.criteria.impl.CriteriaUtils.notSupportedOperation;
 import static io.micronaut.data.model.jpa.criteria.impl.CriteriaUtils.requireParameter;
@@ -62,7 +66,7 @@ import static io.micronaut.data.model.jpa.criteria.impl.CriteriaUtils.requirePro
  */
 @Internal
 public abstract class AbstractPersistentEntityCriteriaUpdate<T> implements PersistentEntityCriteriaUpdate<T>,
-        QueryResultPersistentEntityCriteriaQuery {
+    QueryResultPersistentEntityCriteriaQuery {
 
     protected Predicate predicate;
     protected PersistentEntityRoot<T> entityRoot;
@@ -70,27 +74,37 @@ public abstract class AbstractPersistentEntityCriteriaUpdate<T> implements Persi
     protected Selection<?> returning;
 
     @Override
-    public QueryResult buildQuery(QueryBuilder queryBuilder) {
-        return queryBuilder.buildUpdate(getQueryModel(), updateValues);
+    public QueryResult buildQuery(AnnotationMetadata annotationMetadata, QueryBuilder queryBuilder) {
+        QueryBuilder2 queryBuilder2 = QueryResultPersistentEntityCriteriaQuery.findQueryBuilder2(queryBuilder);
+        if (queryBuilder2 == null) {
+            return queryBuilder.buildUpdate(annotationMetadata, getQueryModel(), updateValues);
+        }
+        return buildQuery(annotationMetadata, queryBuilder2);
     }
 
     @Override
+    public QueryResult buildQuery(AnnotationMetadata annotationMetadata, QueryBuilder2 queryBuilder) {
+        return queryBuilder.buildUpdate(
+            annotationMetadata,
+            new UpdateQueryDefinitionImpl(entityRoot.getPersistentEntity(), predicate, returning, updateValues)
+        );
+    }
+
     @NonNull
+    @Override
     public QueryModel getQueryModel() {
         if (entityRoot == null) {
             throw new IllegalStateException("The root entity must be specified!");
         }
         QueryModel qm = QueryModel.from(entityRoot.getPersistentEntity());
         Joiner joiner = new Joiner();
-        if (predicate instanceof PredicateVisitable) {
-            PredicateVisitable predicate = (PredicateVisitable) this.predicate;
-            predicate.accept(createPredicateVisitor(qm));
-            predicate.accept(joiner);
+        if (predicate instanceof IPredicate predicateVisitable) {
+            predicateVisitable.visitPredicate(createPredicateVisitor(qm));
+            predicateVisitable.visitPredicate(joiner);
         }
-        if (returning instanceof SelectionVisitable) {
-            SelectionVisitable selection = (SelectionVisitable) this.returning;
-            selection.accept(new QueryModelSelectionVisitor(qm, false));
-            selection.accept(joiner);
+        if (returning instanceof ISelection<?> selectionVisitable) {
+            selectionVisitable.visitSelection(new QueryModelSelectionVisitor(qm, false));
+            selectionVisitable.visitSelection(joiner);
         }
         for (Map.Entry<String, Joiner.Joined> e : joiner.getJoins().entrySet()) {
             qm.join(e.getKey(), Optional.ofNullable(e.getValue().getType()).orElse(Join.Type.DEFAULT), e.getValue().getAlias());
@@ -100,6 +114,7 @@ public abstract class AbstractPersistentEntityCriteriaUpdate<T> implements Persi
 
     /**
      * Creates query model predicate visitor.
+     *
      * @param queryModel The query model
      * @return the visitor
      */
@@ -166,18 +181,16 @@ public abstract class AbstractPersistentEntityCriteriaUpdate<T> implements Persi
 
     @Override
     public PersistentEntityCriteriaUpdate<T> where(Expression<Boolean> restriction) {
-        // TODO: bind parameters
         predicate = new ConjunctionPredicate(Collections.singleton((IExpression<Boolean>) restriction));
         return this;
     }
 
     @Override
     public PersistentEntityCriteriaUpdate<T> where(Predicate... restrictions) {
-        // TODO: bind parameters
         Objects.requireNonNull(restrictions);
         if (restrictions.length > 0) {
             predicate = restrictions.length == 1 ? restrictions[0] : new ConjunctionPredicate(
-                    Arrays.stream(restrictions).sequential().map(x -> (IExpression<Boolean>) x).collect(Collectors.toList())
+                Arrays.stream(restrictions).sequential().map(x -> (IExpression<Boolean>) x).toList()
             );
         } else {
             predicate = null;
@@ -238,5 +251,31 @@ public abstract class AbstractPersistentEntityCriteriaUpdate<T> implements Persi
             this.returning = null;
         }
         return this;
+    }
+
+
+    private static final class UpdateQueryDefinitionImpl extends BaseQueryDefinitionImpl implements QueryBuilder2.UpdateQueryDefinition {
+
+        private final Map<String, Object> propertiesToUpdate;
+        private final Selection<?> returningSelection;
+
+        public UpdateQueryDefinitionImpl(PersistentEntity persistentEntity,
+                                         Predicate predicate,
+                                         Selection<?> returningSelection,
+                                         Map<String, Object> propertiesToUpdate) {
+            super(persistentEntity, predicate, Map.of());
+            this.propertiesToUpdate = propertiesToUpdate;
+            this.returningSelection = returningSelection;
+        }
+
+        @Override
+        public Map<String, Object> propertiesToUpdate() {
+            return propertiesToUpdate;
+        }
+
+        @Override
+        public Selection<?> returningSelection() {
+            return returningSelection;
+        }
     }
 }
