@@ -21,19 +21,21 @@ import io.micronaut.core.reflect.ReflectionUtils;
 import io.micronaut.core.util.CollectionUtils;
 import io.micronaut.data.model.jpa.criteria.IExpression;
 import io.micronaut.data.model.jpa.criteria.PersistentEntityRoot;
+import io.micronaut.data.model.jpa.criteria.PersistentEntitySubquery;
 import io.micronaut.data.model.jpa.criteria.PersistentPropertyPath;
+import io.micronaut.data.model.jpa.criteria.impl.expression.LiteralExpression;
 import io.micronaut.data.model.jpa.criteria.impl.predicate.ConjunctionPredicate;
 import io.micronaut.data.model.jpa.criteria.impl.predicate.DisjunctionPredicate;
-import io.micronaut.data.model.jpa.criteria.impl.predicate.PersistentPropertyBinaryPredicate;
-import io.micronaut.data.model.jpa.criteria.impl.predicate.PersistentPropertyInValuesPredicate;
+import io.micronaut.data.model.jpa.criteria.impl.predicate.BinaryPredicate;
+import io.micronaut.data.model.jpa.criteria.impl.predicate.InPredicate;
 import jakarta.persistence.criteria.Expression;
 import jakarta.persistence.criteria.ParameterExpression;
+import jakarta.persistence.criteria.Subquery;
 
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Criteria util class.
@@ -62,111 +64,72 @@ public final class CriteriaUtils {
         return Comparable.class.isAssignableFrom(clazz) || isNumeric(clazz) ;
     }
 
+    public static boolean isTextual(@NonNull Class<?> clazz) {
+        return CharSequence.class.isAssignableFrom(clazz);
+    }
+
     public static List<IExpression<Boolean>> requireBoolExpressions(Iterable<? extends Expression<?>> restrictions) {
-        return CollectionUtils.iterableToList(restrictions).stream().map(CriteriaUtils::requireBoolExpression).collect(Collectors.toList());
+        return CollectionUtils.iterableToList(restrictions).stream().map(CriteriaUtils::requireBoolExpression).toList();
+    }
+
+    public static <T> IExpression<T> requireIExpression(Expression<T> exp) {
+        if (exp instanceof IExpression<T> expression) {
+            return expression;
+        }
+        throw new IllegalStateException("Expected an IExpression! Got: " + exp);
+    }
+
+    public static <T> PersistentEntitySubquery<T> requirePersistentEntitySubquery(Subquery<T> subquery) {
+        if (subquery instanceof PersistentEntitySubquery<T> persistentEntitySubquery) {
+            return persistentEntitySubquery;
+        }
+        throw new IllegalStateException("Expected an PersistentEntitySubquery! Got: " + subquery);
+    }
+
+    public static IExpression<String> requireNumericExpression(Expression<?> exp) {
+        IExpression expression = requireIExpression(exp);
+        if (expression.getExpressionType().isNumeric()) {
+            return expression;
+        }
+        throw new IllegalStateException("Expected a numeric expression! Got: " + expression.getExpressionType().getName());
+    }
+
+    public static IExpression<String> requireStringExpression(Expression<?> exp) {
+        IExpression expression = requireIExpression(exp);
+        if (expression.getExpressionType().isTextual()) {
+            return expression;
+        }
+        throw new IllegalStateException("Expected a string expression! Got: " + expression.getExpressionType().getName());
+    }
+
+    public static <T> Expression<T> requireComparableExpression(Expression<T> exp) {
+        IExpression expression = requireIExpression(exp);
+        if (expression.getExpressionType().isComparable()) {
+            return expression;
+        }
+        throw new IllegalStateException("Expected a comparable expression! Got: " + expression.getExpressionType().getName());
     }
 
     public static IExpression<Boolean> requireBoolExpression(Expression<?> exp) {
-        if (exp instanceof IExpression) {
-            IExpression<Boolean> expression = (IExpression<Boolean>) exp;
-            if (!expression.isBoolean()) {
-                throw new IllegalStateException("Expected a boolean expression! Got: " + exp);
-            }
+        IExpression expression = requireIExpression(exp);
+        if (expression.getExpressionType().isBoolean()) {
             return expression;
         }
-        throw new IllegalStateException("Expression is unknown! Got: " + exp);
-    }
-
-    public static <T> PersistentPropertyPath<T> requireBoolProperty(Expression<Boolean> exp) {
-        if (exp instanceof PersistentPropertyPath) {
-            PersistentPropertyPath<T> propertyPath = (PersistentPropertyPath<T>) exp;
-            if (!propertyPath.isBoolean()) {
-                throw new IllegalStateException("Expected a boolean expression property! Got: " + exp);
-            }
-            return propertyPath;
-        }
-        throw new IllegalStateException("Expression is expected to be a property path! Got: " + exp);
-    }
-
-    public static <T> PersistentPropertyPath<T> requireNumericProperty(Expression<T> exp) {
-        if (exp instanceof PersistentPropertyPath<T> propertyPath) {
-            if (!propertyPath.isNumeric()) {
-                throw new IllegalStateException("Expected a numeric expression property! Got: " + exp);
-            }
-            return propertyPath;
-        }
-        throw new IllegalStateException("Expression is expected to be a property path! Got: " + exp);
-    }
-
-    public static <T> PersistentPropertyPath<T> requireComparableProperty(Expression<T> exp) {
-        if (exp instanceof PersistentPropertyPath<T> propertyPath) {
-            if (!propertyPath.isComparable()) {
-                throw new IllegalStateException("Expected a comparable expression property! Got: " + exp);
-            }
-            return propertyPath;
-        }
-        throw new IllegalStateException("Expression is expected to be a property path! Got: " + exp);
-    }
-
-    public static <T> Expression<T> requireComparablePropertyParameterOrLiteral(Expression<T> exp) {
-        exp = requirePropertyParameterOrLiteral(exp);
-        if (exp instanceof PersistentPropertyPath<?> propertyPath) {
-            if (!propertyPath.isComparable()) {
-                throw new IllegalStateException("Expected a comparable expression property! Got: " + exp);
-            }
-            return exp;
-        }
-        if (exp instanceof ParameterExpression) {
-            // TODO: validation
-            return exp;
-        }
-        if (exp instanceof LiteralExpression) {
-            if (((LiteralExpression<T>) exp).getValue() instanceof Comparable) {
-                return exp;
-            }
-            throw new IllegalStateException("Expected a comparable expression property! Got: " + exp);
-        }
-        return exp;
-    }
-
-    public static <T> Expression<T> requireNumericPropertyParameterOrLiteral(Expression<T> exp) {
-        exp = requirePropertyParameterOrLiteral(exp);
-        if (exp instanceof PersistentPropertyPath<?> propertyPath) {
-            if (!propertyPath.isNumeric()) {
-                throw new IllegalStateException("Expected a numeric expression property! Got: " + exp);
-            }
-            return exp;
-        }
-        if (exp instanceof ParameterExpression) {
-            // TODO: validation
-            return exp;
-        }
-        if (exp instanceof LiteralExpression) {
-            // TODO: validation
-            return exp;
-        }
-        return exp;
+        throw new IllegalStateException("Expected a boolean expression! Got: " + expression.getExpressionType().getName());
     }
 
     public static <T> ParameterExpression<T> requireParameter(Expression<T> exp) {
-        if (exp instanceof ParameterExpression) {
-            return (ParameterExpression<T>) exp;
+        if (exp instanceof ParameterExpression<T> parameterExpression) {
+            return parameterExpression;
         }
         throw new IllegalStateException("Expression is expected to be a parameter! Got: " + exp);
     }
 
     public static <T> PersistentPropertyPath<T> requireProperty(Expression<? extends T> exp) {
-        if (exp instanceof PersistentPropertyPath) {
-            return (PersistentPropertyPath<T>) exp;
+        if (exp instanceof PersistentPropertyPath persistentPropertyPath) {
+            return persistentPropertyPath;
         }
         throw new IllegalStateException("Expression is expected to be a property path! Got: " + exp);
-    }
-
-    public static <T> Expression<T> requirePropertyParameterOrLiteral(Expression<T> exp) {
-        if (exp instanceof PersistentPropertyPath || exp instanceof ParameterExpression || exp instanceof LiteralExpression) {
-            return exp;
-        }
-        throw new IllegalStateException("Expression is expected to be a property path, a parameter or literal! Got: " + exp);
     }
 
     public static <T> IExpression<T> requirePropertyOrRoot(Expression<T> exp) {
@@ -181,9 +144,17 @@ public final class CriteriaUtils {
     }
 
     public static boolean hasVersionPredicate(Expression<?> predicate) {
-        if (predicate instanceof PersistentPropertyBinaryPredicate<?> pp) {
-            return pp.getProperty() == pp.getProperty().getOwner().getVersion();
+        if (predicate instanceof BinaryPredicate binaryPredicate) {
+            if (binaryPredicate.getLeftExpression() instanceof PersistentPropertyPath<?> pp &&
+                pp.getProperty() == pp.getProperty().getOwner().getVersion()) {
+                return true;
+            }
+            if (binaryPredicate.getRightExpression() instanceof PersistentPropertyPath<?> pp &&
+                pp.getProperty() == pp.getProperty().getOwner().getVersion()) {
+                return true;
+            }
         }
+
         if (predicate instanceof ConjunctionPredicate conjunctionPredicate) {
             for (IExpression<Boolean> pred : conjunctionPredicate.getPredicates()) {
                 if (hasVersionPredicate(pred)) {
@@ -211,14 +182,19 @@ public final class CriteriaUtils {
     }
 
     private static void extractPredicateParameters(Expression<?> predicate, Set<ParameterExpression<?>> parameters) {
-        if (predicate instanceof PersistentPropertyBinaryPredicate<?> pp) {
-            if (pp.getExpression() instanceof ParameterExpression) {
-                parameters.add((ParameterExpression<?>) pp.getExpression());
+        if (predicate instanceof LiteralExpression<?>) {
+            return;
+        } else if (predicate instanceof BinaryPredicate binaryPredicate) {
+            if (binaryPredicate.getLeftExpression() instanceof ParameterExpression<?> parameterExpression) {
+                parameters.add(parameterExpression);
             }
-        } else if (predicate instanceof PersistentPropertyInValuesPredicate<?> pp) {
+            if (binaryPredicate.getRightExpression() instanceof ParameterExpression<?> parameterExpression) {
+                parameters.add(parameterExpression);
+            }
+        } else if (predicate instanceof InPredicate<?> pp) {
             for (Expression<?> expression : pp.getValues()) {
-                if (expression instanceof ParameterExpression) {
-                    parameters.add((ParameterExpression<?>) expression);
+                if (expression instanceof ParameterExpression<?> parameterExpression) {
+                    parameters.add(parameterExpression);
                 }
             }
         } else if (predicate instanceof ConjunctionPredicate conjunctionPredicate) {
@@ -229,6 +205,8 @@ public final class CriteriaUtils {
             for (IExpression<Boolean> pred : disjunctionPredicate.getPredicates()) {
                 extractPredicateParameters(pred, parameters);
             }
+        } else {
+            throw new IllegalStateException("Unsupported predicate type: " + predicate.getClass().getSimpleName());
         }
     }
 
