@@ -41,7 +41,7 @@ import io.micronaut.data.model.PersistentEntityUtils;
 import io.micronaut.data.model.PersistentProperty;
 import io.micronaut.data.model.PersistentPropertyPath;
 import io.micronaut.data.model.Sort;
-import io.micronaut.data.model.jpa.criteria.impl.LiteralExpression;
+import io.micronaut.data.model.jpa.criteria.impl.expression.LiteralExpression;
 import io.micronaut.data.model.naming.NamingStrategy;
 import io.micronaut.data.model.query.AssociationQuery;
 import io.micronaut.data.model.query.BindingParameter;
@@ -75,7 +75,7 @@ import java.util.stream.Collectors;
  * @author graemerocher
  * @since 1.0.0
  */
-@SuppressWarnings("checkstyle:FileLength")
+@SuppressWarnings("FileLength")
 public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
     public static final String ORDER_BY_CLAUSE = " ORDER BY ";
     protected static final String SELECT_CLAUSE = "SELECT ";
@@ -260,8 +260,8 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
             appendPropertyRef(whereClause, ctx.getAnnotationMetadata(), ctx.getPersistentEntity(), propertyPath);
             whereClause.append(" IN (");
             Object value = inQuery.getValue();
-            if (value instanceof BindingParameter) {
-                ctx.pushParameter((BindingParameter) value, newBindingContext(propertyPath.propertyPath).expandable());
+            if (value instanceof BindingParameter bindingParameter) {
+                ctx.pushParameter(bindingParameter, newBindingContext(propertyPath.propertyPath).expandable());
             } else {
                 asLiterals(ctx.query(), value);
             }
@@ -274,8 +274,8 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
             appendPropertyRef(whereClause, ctx.getAnnotationMetadata(), ctx.getPersistentEntity(), propertyPath);
             whereClause.append(" NOT IN (");
             Object value = inQuery.getValue();
-            if (value instanceof BindingParameter) {
-                ctx.pushParameter((BindingParameter) value, newBindingContext(propertyPath.propertyPath).expandable());
+            if (value instanceof BindingParameter bindingParameter) {
+                ctx.pushParameter(bindingParameter, newBindingContext(propertyPath.propertyPath).expandable());
             } else {
                 asLiterals(ctx.query(), value);
             }
@@ -332,14 +332,14 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
      */
     @NonNull
     protected String asLiteral(@Nullable Object value) {
-        if (value instanceof LiteralExpression) {
-            value = ((LiteralExpression<?>) value).getValue();
+        if (value instanceof LiteralExpression<?> literalExpression) {
+            value = literalExpression.getValue();
         }
         if (value == null) {
             return "NULL";
         }
-        if (value instanceof Number) {
-            return Long.toString(((Number) value).longValue());
+        if (value instanceof Number number) {
+            return Long.toString(number.longValue());
         }
         if (value instanceof Boolean) {
             return value.toString().toUpperCase(Locale.ROOT);
@@ -377,7 +377,7 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
                     }
                 }
                 return (Runnable) () -> query.append(p);
-            }).collect(Collectors.toList()));
+            }).toList());
         };
     }
 
@@ -551,14 +551,14 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
     @NonNull
     protected String getPathOnlyAliasName(JoinPath joinPath) {
         return joinPath.getAlias().orElseGet(() -> {
-            String p = "";
+            var p = new StringBuilder();
             for (Association ass : joinPath.getAssociationPath()) {
-                p += ass.getAliasName();
+                p.append(ass.getAliasName());
                 if (ass.hasDeclaredAliasName() && ass != joinPath.getAssociation()) {
-                    p += "_";
+                    p.append('_');
                 }
             }
-            return p;
+            return p.toString();
         });
     }
 
@@ -752,8 +752,8 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
                     selectAllColumns(annotationMetadata, queryState, queryString);
                     return;
                 }
-                if (projection instanceof QueryModel.LiteralProjection) {
-                    queryString.append(asLiteral(((QueryModel.LiteralProjection) projection).getValue()));
+                if (projection instanceof QueryModel.LiteralProjection literalProjection) {
+                    queryString.append(asLiteral(literalProjection.getValue()));
                 } else if (projection instanceof QueryModel.CountProjection) {
                     appendProjectionRowCount(queryString, tableAlias);
                 } else if (projection instanceof QueryModel.DistinctProjection) {
@@ -774,11 +774,13 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
                         }
                         queryString.setLength(queryString.length() - 1);
                     } else if (entity.hasIdentity()) {
-                        PersistentProperty identity = entity.getIdentity();
-                        if (identity == null) {
+                        List<PersistentProperty> identityProperties = entity.getIdentityProperties();
+                        if (identityProperties.isEmpty()) {
                             throw new IllegalArgumentException(CANNOT_QUERY_ON_ID_WITH_ENTITY_THAT_HAS_NO_ID);
                         }
-                        appendPropertyProjection(annotationMetadata, queryState.getEntity(), queryString, asQueryPropertyPath(queryState.getRootAlias(), identity), null);
+                        for (PersistentProperty identity : identityProperties) {
+                            appendPropertyProjection(annotationMetadata, queryState.getEntity(), queryString, asQueryPropertyPath(queryState.getRootAlias(), identity), null);
+                        }
                     } else {
                         throw new IllegalArgumentException(CANNOT_QUERY_ON_ID_WITH_ENTITY_THAT_HAS_NO_ID);
                     }
@@ -1469,9 +1471,16 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
                 String jsonEntityColumn = getJsonEntityColumn(annotationMetadata);
                 if (jsonEntityColumn != null) {
                     sb.append(jsonEntityColumn).append(DOT);
+                    PersistentProperty property = propertyPath.getProperty();
+                    if (property == entity.getIdentity()) {
+                        sb.append("\"" + property.getPersistedName() + "\"");
+                    } else {
+                        sb.append(propertyPath.getPath());
+                    }
                 }
+            } else {
+                sb.append(propertyPath.getPath());
             }
-            sb.append(propertyPath.getPath());
         }
     }
 
@@ -1498,8 +1507,8 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
     }
 
     private void appendPlaceholderOrLiteral(CriteriaContext ctx, QueryPropertyPath propertyPath, Object value) {
-        if (value instanceof BindingParameter) {
-            ctx.pushParameter((BindingParameter) value, newBindingContext(propertyPath.propertyPath));
+        if (value instanceof BindingParameter bindingParameter) {
+            ctx.pushParameter(bindingParameter, newBindingContext(propertyPath.propertyPath));
             return;
         }
         ctx.query().append(asLiteral(value));
@@ -1538,6 +1547,12 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
                 if (value instanceof BindingParameter) {
                     int key = 1;
                     queryState.pushParameter(new QueryParameterBinding() {
+
+                        @Override
+                        public String getName() {
+                            return String.valueOf(key);
+                        }
+
                         @Override
                         public String getKey() {
                             return String.valueOf(key);
@@ -1569,7 +1584,7 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
         List<Map.Entry<QueryPropertyPath, Object>> update = propertiesToUpdate.entrySet().stream()
             .map(e -> {
                 QueryPropertyPath propertyPath = findProperty(queryState, e.getKey(), null);
-                if (propertyPath.getProperty() instanceof Association && ((Association) propertyPath.getProperty()).isForeignKey()) {
+                if (propertyPath.getProperty() instanceof Association association && association.isForeignKey()) {
                     throw new IllegalArgumentException("Foreign key associations cannot be updated as part of a batch update statement");
                 }
                 return new AbstractMap.SimpleEntry<>(propertyPath, e.getValue());
@@ -1595,9 +1610,9 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
                     }
                     queryString.append(propertyPath.getPath()).append('=');
                 }
-                if (entry.getValue() instanceof BindingParameter) {
+                if (entry.getValue() instanceof BindingParameter bindingParameter) {
                     appendUpdateSetParameter(queryString, tableAlias, prop, () -> {
-                        queryState.pushParameter((BindingParameter) entry.getValue(), newBindingContext(propertyPath.propertyPath));
+                        queryState.pushParameter(bindingParameter, newBindingContext(propertyPath.propertyPath));
                     });
                 } else {
                     queryString.append(asLiteral(entry.getValue()));
@@ -1614,7 +1629,7 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
             NamingStrategy namingStrategy = getNamingStrategy(queryState.getEntity());
             for (Map.Entry<QueryPropertyPath, Object> entry : update) {
                 QueryPropertyPath propertyPath = entry.getKey();
-                if (entry.getValue() instanceof BindingParameter) {
+                if (entry.getValue() instanceof BindingParameter bindingParameter) {
                     traversePersistentProperties(propertyPath.getAssociations(), propertyPath.getProperty(), (associations, property) -> {
                         String tableAlias = propertyPath.getTableAlias();
                         if (tableAlias != null) {
@@ -1627,7 +1642,7 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
                         queryString.append(columnName).append('=');
                         appendUpdateSetParameter(queryString, tableAlias, property, () -> {
                             queryState.pushParameter(
-                                (BindingParameter) entry.getValue(),
+                                bindingParameter,
                                 newBindingContext(
                                     propertyPath.propertyPath,
                                     PersistentPropertyPath.of(associations, property, asPath(associations, property))
@@ -1688,9 +1703,9 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
      * @param appendParameter The append parameter action
      */
     protected void appendTransformed(StringBuilder sb, String transformed, Runnable appendParameter) {
-        int parameterPosition = transformed.indexOf("?");
+        int parameterPosition = transformed.indexOf('?');
         if (parameterPosition > -1) {
-            if (transformed.lastIndexOf("?") != parameterPosition) {
+            if (transformed.lastIndexOf('?') != parameterPosition) {
                 throw new IllegalStateException("Only one parameter placeholder is allowed!");
             }
             sb.append(transformed, 0, parameterPosition);
@@ -1719,38 +1734,50 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
             if (propertyPath.getAssociations().isEmpty()) {
                 return new QueryPropertyPath(propertyPath, tableAlias);
             }
+            PersistentProperty property = propertyPath.getProperty();
             Association joinAssociation = null;
             StringJoiner joinPathJoiner = new StringJoiner(".");
             String lastJoinAlias = null;
             for (Association association : propertyPath.getAssociations()) {
-                joinPathJoiner.add(association.getName());
                 if (association instanceof Embedded) {
+                    joinPathJoiner.add(association.getName());
                     continue;
                 }
                 if (joinAssociation == null) {
+                    joinPathJoiner.add(association.getName());
                     joinAssociation = association;
                     continue;
                 }
-                if (association != joinAssociation.getAssociatedEntity().getIdentity()) {
-                    if (!queryState.isAllowJoins()) {
-                        throw new IllegalArgumentException("Joins cannot be used in a DELETE or UPDATE operation");
-                    }
-                    String joinStringPath = joinPathJoiner.toString();
-                    if (!queryState.isJoined(joinStringPath)) {
-                        throw new IllegalArgumentException("Property is not joined at path: " + joinStringPath);
-                    }
-                    lastJoinAlias = joinInPath(queryState, joinStringPath);
-                    // Continue to look for a joined property
-                    joinAssociation = association;
-                } else {
+                if (PersistentEntityUtils.isAccessibleWithoutJoin(association, propertyPath.getProperty())) {
                     // We don't need to join to access the id of the relation
-                    joinAssociation = null;
+                    if (lastJoinAlias == null) {
+                        String joinStringPath = joinPathJoiner.toString();
+                        if (!queryState.isJoined(joinStringPath)) {
+                            throw new IllegalArgumentException("Property is not joined at path: " + joinStringPath);
+                        }
+                        lastJoinAlias = joinInPath(queryState, joinPathJoiner.toString());
+                    }
+                    return new QueryPropertyPath(
+                        new PersistentPropertyPath(Collections.emptyList(), association),
+                        lastJoinAlias
+                    );
                 }
+
+                joinPathJoiner.add(association.getName());
+                if (!queryState.isAllowJoins()) {
+                    throw new IllegalArgumentException("Joins cannot be used in a DELETE or UPDATE operation" + (association.getAssociatedEntity().getIdentity() == propertyPath.getProperty()));
+                }
+                String joinStringPath = joinPathJoiner.toString();
+                if (!queryState.isJoined(joinStringPath)) {
+                    throw new IllegalArgumentException("Property is not joined at path: " + joinStringPath);
+                }
+                lastJoinAlias = joinInPath(queryState, joinStringPath);
+                // Continue to look for a joined property
+                joinAssociation = association;
             }
-            PersistentProperty property = propertyPath.getProperty();
             if (joinAssociation != null) {
                 // We don't need to join to access the id of the relation if it is not a foreign key association
-                if (property != joinAssociation.getAssociatedEntity().getIdentity() || joinAssociation.isForeignKey()) {
+                if (!PersistentEntityUtils.isAccessibleWithoutJoin(joinAssociation, propertyPath.getProperty())) {
                     String joinStringPath = joinPathJoiner.toString();
                     if (!queryState.isJoined(joinStringPath)) {
                         throw new IllegalArgumentException("Property is not joined at path: " + joinStringPath);
@@ -1762,7 +1789,7 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
                 if (lastJoinAlias != null) {
                     // 'joinPath.prop' should be represented as a path of 'prop' with a join alias
                     return new QueryPropertyPath(
-                        new PersistentPropertyPath(Collections.emptyList(), property, property.getName()),
+                        new PersistentPropertyPath(Collections.emptyList(), property),
                         lastJoinAlias
                     );
                 }
@@ -1961,8 +1988,6 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
         StringBuilder buff = new StringBuilder(ORDER_BY_CLAUSE);
         Iterator<Sort.Order> i = orders.iterator();
 
-        String jsonEntityColumn = getJsonEntityColumn(annotationMetadata);
-
         while (i.hasNext()) {
             Sort.Order order = i.next();
             String property = order.getProperty();
@@ -1970,59 +1995,9 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
             if (ignoreCase) {
                 buff.append("LOWER(");
             }
-            if (nativeQuery) {
-                buff.append(property);
-            } else {
-                PersistentPropertyPath path = entity.getPropertyPath(property);
-                if (path == null) {
-                    throw new IllegalArgumentException("Cannot sort on non-existent property path: " + property);
-                }
-                List<Association> associations = new ArrayList<>(path.getAssociations());
-                int assocCount = associations.size();
-                // If last association is embedded, it does not need to be joined to the alias since it will be in the destination table
-                // JPA/Hibernate is special case and in that case we leave association for specific handling below
-                if (assocCount > 0 && computePropertyPaths() && associations.get(assocCount - 1) instanceof Embedded) {
-                    associations.remove(assocCount - 1);
-                }
-                if (associations.isEmpty()) {
-                    buff.append(getAliasName(entity));
-                } else {
-                    StringJoiner joiner = new StringJoiner(".");
-                    for (Association association : associations) {
-                        joiner.add(association.getName());
-                    }
-                    String joinAlias = getAliasName(new JoinPath(joiner.toString(), associations.toArray(new Association[0]), Join.Type.DEFAULT, null));
-                    if (!computePropertyPaths()) {
-                        if (!query.contains(" " + joinAlias + " ") && !query.endsWith(" " + joinAlias)) {
-                            // Special hack case for JPA, Hibernate can join the relation with cross join automatically when referenced by the property path
-                            // This probably should be removed in the future major version
-                            buff.append(getAliasName(entity)).append(DOT);
-                            StringJoiner pathJoiner = new StringJoiner(".");
-                            for (Association association : associations) {
-                                pathJoiner.add(association.getName());
-                            }
-                            buff.append(pathJoiner);
-                        } else {
-                            buff.append(joinAlias);
-                        }
-                    } else {
-                        buff.append(joinAlias);
-                    }
-                }
-                buff.append(DOT);
-
-                if (jsonEntityColumn != null) {
-                    buff.append(jsonEntityColumn).append(DOT);
-                }
-
-                if (!computePropertyPaths() || jsonEntityColumn != null) {
-                    buff.append(path.getProperty().getName());
-                } else {
-                    buff.append(getColumnName(path.getProperty()));
-                }
-                if (ignoreCase) {
-                    buff.append(")");
-                }
+            buff.append(buildPropertyByName(property, query, entity, annotationMetadata, nativeQuery));
+            if (ignoreCase) {
+                buff.append(")");
             }
             buff.append(SPACE).append(order.getDirection());
             if (i.hasNext()) {
@@ -2036,6 +2011,81 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
             Collections.emptyList(),
             Collections.emptyMap()
         );
+    }
+
+    /**
+     * Encode the given property retrieval into a query instance.
+     * For example, property name might be encoded as {@code `person_.name`} using
+     * its path and table's alias.
+     *
+     * @param propertyName The name of the property
+     * @param query The query
+     * @param entity The root entity
+     * @param annotationMetadata The annotation metadata
+     * @param nativeQuery Whether the query is native query, in which case the property name will be supplied by the user and not verified
+     * @return The encoded query
+     */
+    public String buildPropertyByName(
+            @NonNull String propertyName, @NonNull String query,
+            @NonNull PersistentEntity entity, @NonNull AnnotationMetadata annotationMetadata,
+            boolean nativeQuery
+    ) {
+        if (nativeQuery) {
+            return propertyName;
+        }
+
+        PersistentPropertyPath path = entity.getPropertyPath(propertyName);
+        if (path == null) {
+            throw new IllegalArgumentException("Cannot sort on non-existent property path: " + propertyName);
+        }
+        List<Association> associations = new ArrayList<>(path.getAssociations());
+        int assocCount = associations.size();
+        // If last association is embedded, it does not need to be joined to the alias since it will be in the destination table
+        // JPA/Hibernate is special case and in that case we leave association for specific handling below
+        if (assocCount > 0 && computePropertyPaths() && associations.get(assocCount - 1) instanceof Embedded) {
+            associations.remove(assocCount - 1);
+        }
+
+        StringBuilder buff = new StringBuilder();
+        if (associations.isEmpty()) {
+            buff.append(getAliasName(entity));
+        } else {
+            StringJoiner joiner = new StringJoiner(".");
+            for (Association association : associations) {
+                joiner.add(association.getName());
+            }
+            String joinAlias = getAliasName(new JoinPath(joiner.toString(), associations.toArray(new Association[0]), Join.Type.DEFAULT, null));
+            if (!computePropertyPaths()) {
+                if (!query.contains(" " + joinAlias + " ") && !query.endsWith(" " + joinAlias)) {
+                    // Special hack case for JPA, Hibernate can join the relation with cross join automatically when referenced by the property path
+                    // This probably should be removed in the future major version
+                    buff.append(getAliasName(entity)).append(DOT);
+                    StringJoiner pathJoiner = new StringJoiner(".");
+                    for (Association association : associations) {
+                        pathJoiner.add(association.getName());
+                    }
+                    buff.append(pathJoiner);
+                } else {
+                    buff.append(joinAlias);
+                }
+            } else {
+                buff.append(joinAlias);
+            }
+        }
+        buff.append(DOT);
+
+        String jsonEntityColumn = getJsonEntityColumn(annotationMetadata);
+        if (jsonEntityColumn != null) {
+            buff.append(jsonEntityColumn).append(DOT);
+        }
+
+        if (!computePropertyPaths() || jsonEntityColumn != null) {
+            buff.append(path.getProperty().getName());
+        } else {
+            buff.append(getColumnName(path.getProperty()));
+        }
+
+        return buff.toString();
     }
 
     /**
@@ -2204,7 +2254,7 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
     }
 
     /**
-     * If and when {@link io.micronaut.data.annotation.EntityRepresentation} annotation with JSON type is used for the repository method but dialect does not support
+     * If and when {@link EntityRepresentation} annotation with JSON type is used for the repository method but dialect does not support
      * JSON entity representations this will throw {@link IllegalArgumentException}.
      *
      * @param entity the persistent entity
@@ -2216,12 +2266,12 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
     }
 
     /**
-     * Checks whether {@link io.micronaut.data.annotation.EntityRepresentation} annotation with JSON type is used for the repository method.
+     * Checks whether {@link EntityRepresentation} annotation with JSON type is used for the repository method.
      * If current dialect does not support handling JSON entity representations, {@link IllegalArgumentException} is thrown.
      *
      * @param annotationMetadata the annotation metadata
      * @param entity the persistent entity
-     * @return true if {@link io.micronaut.data.annotation.EntityRepresentation} annotation with JSON type is used for the repository method
+     * @return true if {@link EntityRepresentation} annotation with JSON type is used for the repository method
      */
     protected boolean isJsonEntity(AnnotationMetadata annotationMetadata, PersistentEntity entity) {
         boolean jsonEntity = DataAnnotationUtils.hasJsonEntityRepresentationAnnotation(annotationMetadata);
@@ -2260,6 +2310,7 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
 
         QueryPropertyPath getRequiredProperty(String name, Class<?> criterionClazz);
 
+        @Override
         default void pushParameter(@NonNull BindingParameter bindingParameter, @NonNull BindingParameter.BindingContext bindingContext) {
             getQueryState().pushParameter(bindingParameter, bindingContext);
         }
@@ -2529,8 +2580,8 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
         /**
          * Default constructor.
          *
-         * @param name The name of the place holder
-         * @param key  The key to set the value of the place holder
+         * @param name The name of the placeholder
+         * @param key  The key to set the value of the placeholder
          */
         public Placeholder(String name, String key) {
             this.name = name;
@@ -2543,14 +2594,14 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
         }
 
         /**
-         * @return The place holder name
+         * @return The placeholder name
          */
         public String getName() {
             return name;
         }
 
         /**
-         * This the precomputed key to set the place holder. In SQL this would be the index.
+         * This the precomputed key to set the placeholder. In SQL this would be the index.
          *
          * @return The key used to set the placeholder.
          */
