@@ -53,11 +53,11 @@ import org.bson.BsonValue;
 import org.bson.codecs.configuration.CodecRegistry;
 import org.bson.conversions.Bson;
 import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 /**
  * Shared implementation of Mongo sync and reactive repositories.
@@ -73,6 +73,8 @@ abstract sealed class AbstractMongoRepositoryOperations<Dtb> extends AbstractRep
 
     protected static final BsonDocument EMPTY = new BsonDocument();
     protected static final Logger QUERY_LOG = DataSettings.QUERY_LOG;
+
+    private static final Logger LOG = LoggerFactory.getLogger(AbstractMongoRepositoryOperations.class);
 
     protected final MongoCollectionNameProvider collectionNameProvider;
     protected final MongoDatabaseNameProvider databaseNameProvider;
@@ -119,15 +121,15 @@ abstract sealed class AbstractMongoRepositoryOperations<Dtb> extends AbstractRep
     protected abstract CodecRegistry getCodecRegistry(Dtb database);
 
     protected <E, R> MongoStoredQuery<E, R> getMongoStoredQuery(StoredQuery<E, R> storedQuery) {
-        if (storedQuery instanceof MongoStoredQuery) {
-            return (MongoStoredQuery<E, R>) storedQuery;
+        if (storedQuery instanceof MongoStoredQuery<E, R> mongoStoredQuery) {
+            return mongoStoredQuery;
         }
         throw new IllegalStateException("Expected for stored query to be of type: MongoStoredQuery");
     }
 
     protected <E, R> MongoPreparedQuery<E, R> getMongoPreparedQuery(PreparedQuery<E, R> preparedQuery) {
-        if (preparedQuery instanceof MongoPreparedQuery) {
-            return (MongoPreparedQuery<E, R>) preparedQuery;
+        if (preparedQuery instanceof MongoPreparedQuery<E, R> mongoPreparedQuery) {
+            return mongoPreparedQuery;
         }
         throw new IllegalStateException("Expected for prepared query to be of type: MongoPreparedQuery");
     }
@@ -163,22 +165,12 @@ abstract sealed class AbstractMongoRepositoryOperations<Dtb> extends AbstractRep
         }
         Optional<BeanIntrospection<R>> introspection = BeanIntrospector.SHARED.findIntrospection(resultType);
         if (introspection.isPresent()) {
-            return (new BeanIntrospectionMapper<BsonDocument, R>() {
-                @Override
-                public Object read(BsonDocument document, String alias) {
-                    BsonValue bsonValue = document.get(alias);
-                    if (bsonValue == null) {
-                        return null;
-                    }
-                    return MongoUtils.toValue(bsonValue);
-                }
-
-                @Override
-                public ConversionService getConversionService() {
-                    return conversionService;
-                }
-
-            }).map(result, resultType);
+            try {
+                return mapIntrospectedObject(result, resultType);
+            } catch (Exception e) {
+                LOG.warn("Failed to map @Introspection annotated result. " +
+                    "Now attempting to fallback and read object from the document. Error: {}", e.getMessage());
+            }
         }
         BsonValue value;
         if (result == null) {
@@ -193,15 +185,34 @@ abstract sealed class AbstractMongoRepositoryOperations<Dtb> extends AbstractRep
                 value = result.values().iterator().next();
             }
         } else if (isDtoProjection) {
-            Object dtoResult = MongoUtils.toValue(result.asDocument(), resultType, codecRegistry);
+            R dtoResult = MongoUtils.toValue(result.asDocument(), resultType, codecRegistry);
             if (resultType.isInstance(dtoResult)) {
-                return (R) dtoResult;
+                return dtoResult;
             }
             return conversionService.convertRequired(dtoResult, resultType);
         } else {
             throw new IllegalStateException("Unrecognized result: " + result);
         }
         return conversionService.convertRequired(MongoUtils.toValue(value), resultType);
+    }
+
+    private <R> R mapIntrospectedObject(BsonDocument result, Class<R> resultType) {
+        return (new BeanIntrospectionMapper<BsonDocument, R>() {
+            @Override
+            public Object read(BsonDocument document, String alias) {
+                BsonValue bsonValue = document.get(alias);
+                if (bsonValue == null) {
+                    return null;
+                }
+                return MongoUtils.toValue(bsonValue);
+            }
+
+            @Override
+            public ConversionService getConversionService() {
+                return conversionService;
+            }
+
+        }).map(result, resultType);
     }
 
     protected BsonDocument association(CodecRegistry codecRegistry,
@@ -244,7 +255,9 @@ abstract sealed class AbstractMongoRepositoryOperations<Dtb> extends AbstractRep
                 sb.append(" collation: ").append(collation);
             }
         }
-        QUERY_LOG.debug(sb.toString());
+        if (QUERY_LOG.isDebugEnabled()) {
+            QUERY_LOG.debug(sb.toString());
+        }
     }
 
     protected void logAggregate(MongoAggregation aggregation) {
@@ -252,13 +265,15 @@ abstract sealed class AbstractMongoRepositoryOperations<Dtb> extends AbstractRep
         StringBuilder sb = new StringBuilder("Executing Mongo 'aggregate'");
         if (options != null) {
             sb.append(" with");
-            sb.append(" pipeline: ").append(aggregation.getPipeline().stream().map(e -> e.toBsonDocument().toJson()).collect(Collectors.toList()));
+            sb.append(" pipeline: ").append(aggregation.getPipeline().stream().map(e -> e.toBsonDocument().toJson()).toList());
             Collation collation = options.getCollation();
             if (collation != null) {
                 sb.append(" collation: ").append(collation);
             }
         }
-        QUERY_LOG.debug(sb.toString());
+        if (QUERY_LOG.isDebugEnabled()) {
+            QUERY_LOG.debug(sb.toString());
+        }
     }
 
 }
