@@ -49,7 +49,7 @@ public final class Restrictions {
                 } catch (Throwable e) {
                     return null;
                 }
-            }).collect(Collectors.toList());
+            }).toList();
 
     private static final List<Restriction> RESTRICTIONS_LIST = Arrays.stream(Restrictions.class.getClasses())
             .filter(clazz -> Restriction.class.isAssignableFrom(clazz) && !Modifier.isAbstract(clazz.getModifiers()))
@@ -59,7 +59,7 @@ public final class Restrictions {
                 } catch (Throwable e) {
                     return null;
                 }
-            }).collect(Collectors.toList());
+            }).toList();
 
     public static final Map<String, PropertyRestriction> PROPERTY_RESTRICTIONS_MAP = PROPERTY_RESTRICTIONS_LIST.stream()
             .collect(Collectors.toMap(PropertyRestriction::getName, p -> p, (a, b) -> a, TreeMap::new));
@@ -97,8 +97,8 @@ public final class Restrictions {
         @Override
         public Predicate find(PersistentEntityRoot<?> entityRoot,
                               PersistentEntityCriteriaBuilder cb,
-                              ParameterExpression<T>[] parameters) {
-            return entityRoot.id().in(parameters[0]);
+                              List<ParameterExpression<T>> parameters) {
+            return entityRoot.id().in(parameters.get(0));
         }
     }
 
@@ -385,12 +385,12 @@ public final class Restrictions {
     }
 
     /**
-     * Case insensitive like.
+     * Case-insensitive like.
      */
     public static class PropertyIlike extends SinglePropertyExpressionRestriction<String> {
 
         public PropertyIlike() {
-            super(PersistentEntityCriteriaBuilder::ilikeString);
+            super(PersistentEntityCriteriaBuilder::ilike);
         }
 
         @Override
@@ -405,7 +405,7 @@ public final class Restrictions {
     public static class PropertyRlike extends SinglePropertyExpressionRestriction<String> {
 
         public PropertyRlike() {
-            super(PersistentEntityCriteriaBuilder::rlikeString);
+            super(PersistentEntityCriteriaBuilder::regex);
         }
 
         @Override
@@ -449,8 +449,8 @@ public final class Restrictions {
         public Predicate find(PersistentEntityRoot<?> entityRoot,
                               PersistentEntityCriteriaBuilder cb,
                               Expression<T> expression,
-                              ParameterExpression<T>[] parameters) {
-            return expression.in(parameters[0]).not();
+                              List<ParameterExpression<T>> parameters) {
+            return expression.in(parameters.get(0)).not();
         }
     }
 
@@ -489,8 +489,8 @@ public final class Restrictions {
         public Predicate find(PersistentEntityRoot<?> entityRoot,
                               PersistentEntityCriteriaBuilder cb,
                               Expression<T> expression,
-                              ParameterExpression<T>[] parameters) {
-            return expression.in(parameters[0]);
+                              List<ParameterExpression<T>> parameters) {
+            return expression.in(parameters.get(0));
         }
     }
 
@@ -622,8 +622,8 @@ public final class Restrictions {
         public Predicate find(PersistentEntityRoot<?> entityRoot,
                               PersistentEntityCriteriaBuilder cb,
                               Expression<T> expression,
-                              ParameterExpression<T>[] parameters) {
-            return cb.between(expression, parameters[0], parameters[1]);
+                              List<ParameterExpression<T>> parameters) {
+            return cb.between(expression, parameters.get(0), parameters.get(1));
         }
 
     }
@@ -733,7 +733,7 @@ public final class Restrictions {
         public Predicate find(PersistentEntityRoot<?> entityRoot,
                               PersistentEntityCriteriaBuilder cb,
                               Expression<T> expression,
-                              ParameterExpression<T>[] parameters) {
+                              List<ParameterExpression<T>> parameters) {
             return func.apply(cb, expression);
         }
     }
@@ -755,8 +755,8 @@ public final class Restrictions {
         public Predicate find(PersistentEntityRoot<?> entityRoot,
                               PersistentEntityCriteriaBuilder cb,
                               Expression<T> expression,
-                              ParameterExpression<T>[] parameters) {
-            return func.apply(cb, expression, parameters[0]);
+                              List<ParameterExpression<T>> parameters) {
+            return func.apply(cb, expression, parameters.get(0));
         }
     }
 
@@ -776,7 +776,7 @@ public final class Restrictions {
         Predicate find(@NonNull PersistentEntityRoot<?> entityRoot,
                        @NonNull PersistentEntityCriteriaBuilder cb,
                        @NonNull Expression<T> expression,
-                       @NonNull ParameterExpression<T>[] parameters);
+                       @NonNull List<ParameterExpression<T>> parameters);
     }
 
     /**
@@ -793,7 +793,7 @@ public final class Restrictions {
         @NonNull
         Predicate find(@NonNull PersistentEntityRoot<?> entityRoot,
                        @NonNull PersistentEntityCriteriaBuilder cb,
-                       @NonNull ParameterExpression<T>[] parameters);
+                       @NonNull List<ParameterExpression<T>> parameters);
 
     }
 
